--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "scripts": {
     "build-contract": "solc contracts/Gravity.sol --abi -o abis --overwrite && solc contracts/Gravity.sol --bin -o bin --overwrite",
-    "create": "graph create Aveesh52/pos-burn-subgraph --node https://api.thegraph.com/deploy/",
+    "create": "graph create Aveesh52/pos-burn-subgraph --node https://mumbai-graph.matic.today/",
     "create-local": "graph create Aveesh52/pos-burn-subgraph --node http://127.0.0.1:8020",
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy Aveesh52/pos-burn-subgraph --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "deploy-local": "graph deploy Aveesh52/pos-burn-subgraph --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
+    "deploy": "graph deploy Aveesh52/pos-burn-subgraph --ipfs https://ipfs.infura.io:5001/ --node https://mumbai-graph.matic.today",
+    "deploy-local": "graph deploy Aveesh52/pos-burn-subgraph --ipfs https://ipfs.infura.io:5001/ --node http://127.0.0.1:8020"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.18.0",
